--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,24 @@
-h1, p {
-  font-family: Lato;
+* {
+  background-color: #202327;
+  color: antiquewhite;
+  font-family: sans-serif;
+}
+
+h1,
+p {
+  /* font-family: Loto; */
+}
+
+button {
+  border: 2px solid purple;
+  border-radius: 4px;
+  padding: 1rem;
+}
+button:hover {
+  background-color: #2b2f36;
+}
+
+input {
+  border: 2px solid purple;
+  padding: 0.5rem;
 }
